# next
- Play icon for current song in queue shows playing status and toggles play/pause
- Fixes "undefined" output in the queue album information
- Performance improvements(tm)

# 4.1
- Adds simplified queue layout at narrow window size
- Redesigns destructive actions confirmation dialogs
- Splits saving the queue into two separate dialogs
- Fixes overflowing text in queue
- Reduces RAM usage

# 4.0
- Adds removing a playlist
- Adds saving the queue as playlist
- Adds reordering from items in the queue
- Adds emptying the queue
- Adds selecting items in the queue (with some advanced options in the context menu)
- Adds removing selected items from the queue
- Fixes issues if song meta information included special characters
- Adds cover cache clearing (currently context-menu on the widget cover). - Use it in case of emergency. But! If someone(tm) stuffed a huge png into a file or the audio-file is very big (long duration) then loading the cover for the first time may take several seconds. Give it time, that's normal. 
- Lots of code refactoring. - Some parts are trickling down into the "Yeah, that looks reasonable" bucket now. But the vast majority still falls out of the "What dis?" QML-cloud. It's a learning experience.

# 3.2
- Improves updating queue and playing status after playlist change
- Improves handling of files without cover
- Minor bugfixes

# 3.1
- Fixes duplicate entries in queue not showing 
- Fixes reconnect after wakeup

# 3.0
- Checks if mpc is found before trying to execute commands with it.
- Shows instruction message if mpc isn't found.
- Improves check and reconnect if mpd-server is not found
- Improves check and reconnect if network isn't available
- Sticking with major version numbers, since this seems more robust on pling(?)

# 2.0
- Shows generic album-icon if no cover is available
- Selects currently playing item when Queue window is shown
- Uses breeze's generic media-controller icon as widget-symbol-icon