@@ -1,6 +1,8 @@
 # next
 - Play icon for current song in queue shows playing status and toggles play/pause
 - Fixes "undefined" output in the queue album information
+- Fixes widget sometimes being stuck on no song playing after queue change
+- Fixes the cover glitching through no-cover during queue change
 - Performance improvements(tm)
 
 # 4.1
